# WEB_modele2

WEB module 2/: Dockerfile  addressbook.pkl  pyproject.toml  task_2.py
