[tool.poetry]
name = "hw2"
version = "0.1.0"
description = ""
authors = ["Oleksandr Siryk <sanbx2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
datetime = "^5.5"
timedelta = "^2020.12.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
